--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.14",
+		"mysql2": "^3.3.5",
 		"postcss": "^8.4.23",
 		"tailwindcss": "^3.3.2",
 		"uuid": "^9.0.0"
